created folder for assets

--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
     }
 
     body {
-      background-image: url(delicious-indian-thali-with-naan-bread-rice.jpg);
+      background-image: url(assets/delicious-indian-thali-with-naan-bread-rice.jpg);
       display: flex;
       justify-content: center;
       align-items: center;
       min-height: 100vh;
       background-repeat: no-repeat;
       background-size: cover;
+      background-color: orange;
     }
 
     .container {
@@ -173,6 +174,7 @@
         padding: 10px;
         font-size: 15px;
       }
+      
     }
   </style>
 </head>
@@ -180,7 +182,7 @@
 <body>
   <div class="container">
     <div class="side left">
-      <img src="high-angle-indian-food-assortment.jpg" alt="Restaurant Image Left">
+      <img src="assets/high-angle-indian-food-assortment.jpg" alt="Restaurant Image Left">
     </div>
 
     <div class="center">
@@ -218,7 +220,7 @@
     </div>
 
     <div class="side right">
-      <img src="pre-prepared-food-showcasing-ready-eat-delicious-meals-go (1).jpg" alt="Restaurant Image Right">
+      <img src="assets/pre-prepared-food-showcasing-ready-eat-delicious-meals-go (1).jpg" alt="Restaurant Image Right">
     </div>
   </div>
 
